# gel-cli

./: .git-blame-ignore-revs  Cargo.toml  README.md  analyze.py  edgedb-init.sh  flake.nix  gel-init.sh  justfile  rust-toolchain.toml  vagga.yaml
.github/: Makefile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dryrun.yml  install_tests.yaml  new-tests.yml  nightly.yml  release.yml  testing.yml  tests.yml
.github/workflows.src/: build.inc.yml  build.targets.yml  dryrun.tpl.yml
edgedb-cli-derive/: Cargo.toml
edgedb-cli-derive/src/: types.rs
gel-cli-derive/: Cargo.toml
gel-cli-derive/src/: attrib.rs  into_app.rs  into_args.rs  lib.rs
gel-cli-instance/: Cargo.toml
gel-cli-instance/src/: lib.rs
gel-cli-instance/src/cloud/: instance.rs  mod.rs  schema.rs
gel-cli-instance/src/docker/: mod.rs
gel-cli-instance/src/docker/cmd/: mod.rs
gel-cli-instance/src/instance/: backup.rs  mod.rs
gel-cli-instance/src/local/: localbackup.rs  mod.rs
gel-cli-instance/testdata/docker/: compose-ps-not-running.txt  compose-ps.txt  inspect-compose.txt  inspect-manual.txt  inspect-no-ports.txt  jwk.pem  tls-cert.pem  tls-key.pem
src/: branding.rs  collect.rs  completion.rs  config.rs  connect.rs  credentials.rs  docker.rs  error_display.rs  format.rs  git.rs  highlight.rs  interactive.rs  interrupt.rs  locking.rs  log_levels.rs  main.rs  markdown.rs  non_interactive.rs  options.rs  platform.rs  process.rs  prompt.rs  question.rs  repl.rs  table.rs  variables.rs  version_check.rs
src/analyze/: table.rs
src/branch/: context.rs  merge.rs  mod.rs  rebase.rs  rename.rs  switch.rs  wipe.rs
src/cli/: env.rs  gen_completions.rs  install.rs  logo.rs  markdown.rs  mod.rs  upgrade.rs
src/cloud/: auth.rs  backups.rs  client.rs  ops.rs  secret_keys.rs
src/commands/: backslash.rs  cli.rs  configure.rs  database.rs  (+20 more)
tests/: docker_test_wrapper.rs  portable_project.rs  portable_project_dir.rs  portable_smoke.rs
(+143 files in other folders)
