[package]
name = "gel-cli-instance"
license = "MIT/Apache-2.0"
version = "7.2.0-dev"
authors = ["Gel Data Inc. <yo@geldata.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["process"] }
bytes = "1"
scopeguard = "1"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
derive_more = { version = "2", features = ["error", "display"] }
humantime-serde = "1.1.1"
clap = "4"

[dev-dependencies]
rstest = "0.25"
