[package]
name = "gel-cli-instance"
license = "MIT/Apache-2.0"
version = "7.2.0-dev"
authors = ["Gel Data Inc. <yo@geldata.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
gel-dsn = { workspace = true, features = ["gel", "unstable"] }

tokio = { version = "1", features = ["process"] }
futures = "0.3"
bytes = "1"
scopeguard = "1"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
derive_more = { version = "2", features = ["error", "display"] }
humantime-serde = "1.1.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memchr = "2.7"
uuid = { version = "1", default-features = false, features = ["std", "v7"] }
tar = "0.4.44"

[dev-dependencies]
rstest = "0.25"
tokio = { version = "1", features = ["full"] }
